--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>fr.mc2d</groupId>
     <artifactId>mc2d-authlib</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.1</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -16,11 +16,14 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.json</groupId>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/libs/json-simple-1.1.1.jar</systemPath>
         </dependency>
     </dependencies>
 
