--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>fr.mc2d</groupId>
     <artifactId>mc2d-authlib</artifactId>
-    <version>2.3</version>
+    <version>2.4</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -18,6 +18,10 @@
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
+        </repository>
+        <repository>
+            <id>central</id>
+            <url>https://repo.maven.apache.org/maven2</url>
         </repository>
     </repositories>
 
@@ -31,6 +35,11 @@
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
             <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.1-jre</version> <!-- Utilisez la dernière version disponible -->
         </dependency>
     </dependencies>
 
